# Tessera

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  appmap.mp  install.ps1  install.sh  pyproject.toml
.github/workflows/: build-app.yml  ci.yml
docs/: 01-product-vision-and-prd.md  02-business-case-and-strategy.md  03-system-architecture.md  04-accuracy-and-trust-engine.md  05-data-flywheel-and-model-strategy.md  06-data-model-and-api-contracts.md  07-hitl-ux-spec.md  08-implementation-and-development-plan.md  09-risks-open-questions-and-glossary.md  README.md  case-study-issue-triage.md  partner-one-pager.md
packaging/: launcher.py
sample_data/: gold.jsonl
scripts/: cascade.py  fetch_agnews.py  fetch_github_issues.py  simulate_review.py  validate_run.py
tessera/: __init__.py  app.py  cli.py  config.py  export.py  flywheel.py  pipeline.py  quality.py  rubricfit.py  schemas.py  server.py  serving.py  storage.py
tessera/engine/: __init__.py  audit.py  calibration.py  confidence.py  embed.py  gating.py  goldset.py  metrics.py  spans.py  (+3 more)
tests/: __init__.py  regression_baseline.json  test_app_cmd.py  test_app_ui.py  test_audit.py  test_autopilot.py  test_consensus.py  test_engine.py  test_gold_growth.py  test_judge.py  test_llm.py  test_no_signal.py  test_pairwise.py  test_partner_prep.py  test_paths.py  test_pipeline.py  test_propagate.py  test_regression.py  test_router.py  test_rubricfit.py  test_serve_target.py  test_server.py  test_serving.py  test_settings_page.py  test_span.py  test_specialist.py  test_storage.py  test_undo.py
(+17 files in other folders)
